--- a/index.html
+++ b/index.html
@@ -5,12 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Website</title>
-    <!-- <link rel="stylesheet" href="./style.css"> -->
+    <link rel="stylesheet" href="style.css">
     <!-- <link rel="icon" href="./favicon.ico" type="image/x-icon"> -->
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
+    <script src="sketch.js"></script>
+
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap');
+    </style>
   </head>
-  <body>
+  <body id="body">
     <main>
-        <h1>Welcome to My Website</h1>  
+      <div class="center-block">
+        <h1 class="center-text">Welcome to My Website</h1>  
+        <div class="flex-container">
+          <div class="circle">1</div>
+          <div class="circle">2</div>
+          <div class="circle">3</div>
+          <div class="circle">4</div>
+          <div class="circle">5</div>
+          <div class="circle">6</div>
+          <div class="circle">7</div>
+          <div class="circle">8</div>
+          <div class="circle">9</div>
+        </div>
+      </div>
     </main>
 	<!-- <script src="index.js"></script> -->
   </body>
