--- a/index.html
+++ b/index.html
@@ -17,20 +17,28 @@
   <body id="body">
     <main>
       <div class="center-block">
-        <h1 class="center-text">Welcome to My Website</h1>  
+        <div id="dynamic-text" class="header-text">tingwu /</div>
         <div class="flex-container">
-          <div class="circle">1</div>
-          <div class="circle">2</div>
-          <div class="circle">3</div>
-          <div class="circle">4</div>
-          <div class="circle">5</div>
-          <div class="circle">6</div>
-          <div class="circle">7</div>
-          <div class="circle">8</div>
-          <div class="circle">9</div>
+          <div class="circle" onmouseover="changeText('Text for Circle 1')"></div>
+          <div class="circle" onmouseover="changeText('Text for Circle 2')"></div>
+          <div class="circle" onmouseover="changeText('Text for Circle 3')"></div>
+          <div class="circle" onmouseover="changeText('Text for Circle 4')"></div>
         </div>
+        <!-- <div id="dynamic-text" class="center-text"></div> -->
       </div>
     </main>
+
+    <script>
+      function changeText(newText) {
+        var dynamicText = document.getElementById('dynamic-text');
+        dynamicText.textContent = "tingwu / " + newText;
+      }
+
+      function resetText() {
+        var dynamicText = document.getElementById('dynamic-text');
+        dynamicText.textContent = "";
+      }
+    </script>
 	<!-- <script src="index.js"></script> -->
   </body>
 </html>
