--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
+    <title>Tingwu Chang</title>
     <link rel="stylesheet" href="style.css">
     <!-- <link rel="icon" href="./favicon.ico" type="image/x-icon"> -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
@@ -19,10 +19,10 @@
       <div class="center-block">
         <div id="dynamic-text" class="header-text">tingwu /</div>
         <div class="flex-container">
-          <div class="circle" onmouseover="changeText('Text for Circle 1')"></div>
-          <div class="circle" onmouseover="changeText('Text for Circle 2')"></div>
-          <div class="circle" onmouseover="changeText('Text for Circle 3')"></div>
-          <div class="circle" onmouseover="changeText('Text for Circle 4')"></div>
+          <div class="circle" onmouseover="changeText('Under construction 1')"></div>
+          <div class="circle" onmouseover="changeText('Under construction 2')"></div>
+          <div class="circle" onmouseover="changeText('Under construction 3')"></div>
+          <div class="circle" onmouseover="changeText('Under construction 4')"></div>
         </div>
         <!-- <div id="dynamic-text" class="center-text"></div> -->
       </div>
