--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       <div class="center-block">
         <div id="dynamic-text" class="header-text">tingwu /</div>
         <div class="flex-container">
-          <div class="circle" onmouseover="changeText('Under construction 1')"></div>
-          <div class="circle" onmouseover="changeText('Under construction 2')"></div>
-          <div class="circle" onmouseover="changeText('Under construction 3')"></div>
-          <div class="circle" onmouseover="changeText('Under construction 4')"></div>
+          <div class="circle" onmouseover="changeText('Strings')" onclick="window.location='/Strings-Expo';"></div>
+          <div class="circle" onmouseover="changeText('GitHub')"  onclick="window.location='https://github.com/tingwoo';"></div>
+          <div class="circle" onmouseover="changeText('Under construction')"></div>
+          <div class="circle" onmouseover="changeText('Under construction')"></div>
         </div>
         <!-- <div id="dynamic-text" class="center-text"></div> -->
       </div>
