adjusted centering method

--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
   </head>
   <body id="body">
     <main>
-      <div class="center-block">
-        <div id="dynamic-text" class="header-text">tingwu /</div>
-        <div class="flex-container">
-          <div class="circle" onmouseover="changeText('Strings')" onclick="window.location='/Strings-Expo';"></div>
-          <div class="circle" onmouseover="changeText('GitHub')"  onclick="window.location='https://github.com/tingwoo';"></div>
-          <div class="circle" onmouseover="changeText('Under construction')"></div>
-          <div class="circle" onmouseover="changeText('Under construction')"></div>
+      <div class="outer-block">
+        <div class="center-block">
+          <div id="dynamic-text" class="header-text">tingwu /</div>
+          <div class="flex-container">
+            <div class="circle" onmouseover="changeText('Strings')" onclick="window.location='/Strings-Expo';"></div>
+            <div class="circle" onmouseover="changeText('GitHub')"  onclick="window.location='https://github.com/tingwoo';"></div>
+            <div class="circle" onmouseover="changeText('Under construction')"></div>
+            <div class="circle" onmouseover="changeText('Under construction')"></div>
+          </div>
         </div>
-        <!-- <div id="dynamic-text" class="center-text"></div> -->
       </div>
     </main>
 
