--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <div class="center-block">
           <div id="dynamic-text" class="header-text">tingwu /</div>
           <div class="flex-container">
-            <div class="circle" onmouseover="changeText('Strings')" onclick="window.location='/Strings-Expo';"></div>
             <div class="circle" onmouseover="changeText('GitHub')"  onclick="window.location='https://github.com/tingwoo';"></div>
-            <div class="circle" onmouseover="changeText('Under construction')"></div>
-            <div class="circle" onmouseover="changeText('Under construction')"></div>
+            <div class="circle" onmouseover="changeText('Strings')" onclick="window.location='/Strings-Expo';"></div>
+            <div class="circle" onmouseover="changeText('Pixelation')" onclick="window.location='/P5-Pixel-Shader';"></div>
+            <div class="circle" onmouseover="changeText('Gallery')"  onclick="window.location='https://instagram.com/tingwu.uwu';"></div>
           </div>
         </div>
       </div>
